Read SNOWPROFILE_APP_DIR from system property snowprofile.home (if set)

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 
 }
 
+run {
+	systemProperties['snowprofile.home'] = System.properties['snowprofile.home']
+}
+
 test {
 	useTestNG()
 }
